--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>YunoHost admin</title>
 </head>
 <body>
-    <p>Design YNH</p>
+    <form>
+        <fieldset>
+            <legend>Connexion</legend>
+            <label for="user">Utilisateur</label>
+            <input type="text" id="user" placeholder="Nom d'utilisateur"/>
+            <label for="password">Mot de passe</label>
+            <input type="password" id="password" placeholder="Mot de passe"/>
+        </fieldset>
+        <input type="submit" value="Connexion"/>
+    </form>
 </body>
 </html>
