[add] update user page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="front.css"/>
     <title>YunoHost design</title>
 </head>
-<body class="front">
+<body>
     <ul>
         <li><a href="admin">Admin</a></li>
         <li><a href="website">Website</a></li>
