--- a/user/home.html
+++ b/user/home.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="../lib/css/ratatouille.css"/>
     <link rel="stylesheet" href="../lib/css/font.css"/>
     <link rel="stylesheet" href="../lib/css/main.css"/>
-    <link rel="stylesheet" href="../lib/css/interface.css"/>
-    <link rel="stylesheet" href="front.css"/>
+    <link rel="stylesheet" href="interface.css"/>
     <title>YunoHost admin</title>
 </head>
 <body class="front">
