[add] update design home page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="admin">Admin</a></li>
         <li><a href="website">Website</a></li>
         <li><a href="user">User</a></li>
+        <li><a href="style-guide">Style guide</a></li>
     </ul>
 </body>
 </html>
