--- a/user/home.html
+++ b/user/home.html
@@ -14,16 +14,21 @@
 </head>
 <body class="front">
     <h1 class="posa logo"><img src="img/logo-ynh.png"/><span class="element-invisible">Yunohost</span></h1>
-    <div class="w80 mauto interface">
-        <div class="box user dib sourcePro tac">
+    <div class="mauto interface">
+        <div class="box user dib sourcePro tac posf">
             <div class="user-image icon-user icon"></div>
             <h2 class="user-pseudo">Courgette</h2>
             <h3 class="user-name">Thomas LEBEAU</h3>
+            <ul class="link-list menu-user">
+                <li><a href="">Edit</a></li>
+                <li><a href="">Change password</a></li>
+                <li><a href="">Logout</a></li>
+            </ul>
         </div>
         <ul class="link-list dib apps">
-            <li class="box"><a class="icon-envelope sourceProBoldd" href="">RoundCube</a></li>
-            <li class="box"><a class="icon-comments sourceProBold" href="">Jappix</a></li>
-            <li class="box"><a class="icon-upload sourceProBold" href="">Owncloud</a></li>
+            <li class="box"><a class="sourceProBold" href="">Ro<span>RoundCube</span></a></li>
+            <li class="box"><a class="sourceProBold" href="">Ja<span>Jappix</span></a></li>
+            <li class="box"><a class="sourceProBold" href="">Ow<span>Owncloud</span></a></li>
         </ul>
         
     </div>
