[add] apps tableau periodique

--- a/user/home.html
+++ b/user/home.html
@@ -26,9 +26,9 @@
             </ul>
         </div>
         <ul class="link-list dib apps">
-            <li class="box"><a class="sourceProBold" href="">Ro<span>RoundCube</span></a></li>
-            <li class="box"><a class="sourceProBold" href="">Ja<span>Jappix</span></a></li>
-            <li class="box"><a class="sourceProBold" href="">Ow<span>Owncloud</span></a></li>
+            <li class="box"><a class="sourcePro purplebg" href="">Ro<span>RoundCube</span></a></li>
+            <li class="box"><a class="sourcePro orangebg" href="">Ja<span>Jappix</span></a></li>
+            <li class="box"><a class="sourcePro redbg" href="">Ow<span>Owncloud</span></a></li>
         </ul>
         
     </div>
