--- a/user/home.html
+++ b/user/home.html
@@ -15,7 +15,7 @@
 <body class="front">
     <h1 class="posa logo"><img src="img/logo-ynh.png"/><span class="element-invisible">Yunohost</span></h1>
     <div class="mauto interface">
-        <div class="box user dib sourcePro tac posf">
+        <!--<div class="box user dib sourcePro tac posf">
             <div class="user-image icon-user icon"></div>
             <h2 class="user-pseudo">Courgette</h2>
             <h3 class="user-name">Thomas LEBEAU</h3>
@@ -24,11 +24,12 @@
                 <li><a href="">Change password</a></li>
                 <li><a href="">Logout</a></li>
             </ul>
-        </div>
-        <ul class="link-list dib apps">
-            <li class="box"><a class="sourcePro purplebg" href="">Ro<span>RoundCube</span></a></li>
-            <li class="box"><a class="sourcePro orangebg" href="">Ja<span>Jappix</span></a></li>
-            <li class="box"><a class="sourcePro redbg" href="">Ow<span>Owncloud</span></a></li>
+        </div>-->
+        <ul class="link-list dib apps sourceProBold">
+            <li class="box"><a class="bluebg" href="">Ro<span class="sourcePro">RoundCube</span></a></li>
+            <li class="box"><a class="purplebg" href="">Ja<span class="sourcePro">Jappix</span></a></li>
+            <li class="box"><a class="redbg" href="">Ow<span class="sourcePro">Owncloud</span></a></li>
+            <li class="box"><a class="orangebg" href="">Tr<span class="sourcePro">Transmission</span></a></li>
         </ul>
         
     </div>
