--- a/user/home.html
+++ b/user/home.html
@@ -15,17 +15,17 @@
 <body class="front">
     <h1 class="posa logo"><img src="img/logo-ynh.png"/><span class="element-invisible">Yunohost</span></h1>
     <div class="mauto interface">
-        <!--<div class="box user dib sourcePro tac posf">
+        <div class="user sourcePro tac">
             <div class="user-image icon-user icon"></div>
-            <h2 class="user-pseudo">Courgette</h2>
+            <h2 class="user-pseudo sourceProBold">Courgette</h2>
             <h3 class="user-name">Thomas LEBEAU</h3>
-            <ul class="link-list menu-user">
+            <ul class="link-list user-menu">
                 <li><a href="">Edit</a></li>
                 <li><a href="">Change password</a></li>
                 <li><a href="">Logout</a></li>
             </ul>
-        </div>-->
-        <ul class="link-list dib apps sourceProBold">
+        </div>
+        <ul class="link-list apps sourceProBold col2 col">
             <li class="box"><a class="bluebg" href="">Ro<span class="sourcePro">RoundCube</span></a></li>
             <li class="box"><a class="purplebg" href="">Ja<span class="sourcePro">Jappix</span></a></li>
             <li class="box"><a class="redbg" href="">Ow<span class="sourcePro">Owncloud</span></a></li>
