[add] less + styleguide + test effect + review mobile first

--- a/user/home.html
+++ b/user/home.html
@@ -1,37 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="viewport" content="user-scalable=no, width=device-width, height=device-height" />
-    <link rel="stylesheet" href="../lib/css/ratatouille.css"/>
-    <link rel="stylesheet" href="../lib/css/font.css"/>
-    <link rel="stylesheet" href="../lib/css/main.css"/>
-    <link rel="stylesheet" href="interface.css"/>
-    <title>YunoHost admin</title>
-</head>
-<body class="front">
-    <h1 class="posa logo"><img src="img/logo-ynh.png"/><span class="element-invisible">Yunohost</span></h1>
-    <div class="mauto interface">
-        <div class="user sourcePro tac">
-            <div class="user-image icon-user icon"></div>
-            <h2 class="user-pseudo sourceProBold">Courgette</h2>
-            <h3 class="user-name">Thomas LEBEAU</h3>
-            <ul class="link-list user-menu">
-                <li><a href="">Edit</a></li>
-                <li><a href="">Change password</a></li>
-                <li><a href="">Logout</a></li>
-            </ul>
-        </div>
-        <ul class="link-list apps sourceProBold col2 col">
-            <li class="box"><a class="bluebg" href="">Ro<span class="sourcePro">RoundCube</span></a></li>
-            <li class="box"><a class="purplebg" href="">Ja<span class="sourcePro">Jappix</span></a></li>
-            <li class="box"><a class="redbg" href="">Ow<span class="sourcePro">Owncloud</span></a></li>
-            <li class="box"><a class="orangebg" href="">Tr<span class="sourcePro">Transmission</span></a></li>
+
+<div class="mauto interface">
+    <div class="user sourcePro tac">
+        <div class="user-image icon-user icon"></div>
+        <h2 class="user-pseudo sourceProBold">Courgette</h2>
+        <h3 class="user-name">Thomas LEBEAU</h3>
+        <ul class="link-list user-menu">
+            <li><a href="">Edit</a></li>
+            <li><a href="">Change password</a></li>
+            <li><a href="">Logout</a></li>
         </ul>
-        
     </div>
-</body>
-</html>
+    <ul class="link-list apps sourceProBold col2 col">
+        <li class="box"><a class="bluebg" href="">Ro<span class="sourcePro">RoundCube</span></a></li>
+        <li class="box"><a class="purplebg" href="">Ja<span class="sourcePro">Jappix</span></a></li>
+        <li class="box"><a class="redbg" href="">Ow<span class="sourcePro">Owncloud</span></a></li>
+        <li class="box"><a class="orangebg" href="">Tr<span class="sourcePro">Transmission</span></a></li>
+    </ul>
+    <footer class="tac">
+        <a class="btn icon icon-connexion" href="">Logout</a>
+    </footer>
+</div>
