[add] review user

--- a/user/home.html
+++ b/user/home.html
@@ -1,4 +1,23 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, height=device-height" />
+    <link rel="stylesheet" href="../lib/css/ratatouille.css"/>
+    <link rel="stylesheet" href="../lib/css/font.css"/>
+    <link rel="stylesheet" href="front.css"/>
+    <link rel="stylesheet/less" href="../lib/css/main.less"/>
+    <link rel="stylesheet/less" href="../lib/css/anim.less"/>
+    <link rel="stylesheet/less" href="interface.less"/>
+    <script src="../lib/less-1.6.3.min.js" type="text/javascript"></script>
+
+    <title>YunoHost admin</title>
+</head>
+<body class="front">
 <div class="mauto interface">
     <div class="user sourcePro tac">
         <div class="user-image icon-user icon"></div>
@@ -11,12 +30,14 @@
         </ul>
     </div>
     <ul class="link-list apps sourceProBold col2 col">
-        <li class="box"><a class="bluebg" href="">Ro<span class="sourcePro">RoundCube</span></a></li>
-        <li class="box"><a class="purplebg" href="">Ja<span class="sourcePro">Jappix</span></a></li>
-        <li class="box"><a class="redbg" href="">Ow<span class="sourcePro">Owncloud</span></a></li>
-        <li class="box"><a class="orangebg" href="">Tr<span class="sourcePro">Transmission</span></a></li>
+        <li class="box"><a data-ajax="home.html" data-anim="slidetoleft" class="bluebg" href="appFull.html">Ro<span class="sourcePro">RoundCube</span></a></li>
+        <li class="box"><a class="purplebg" href="appFull.html">Ja<span class="sourcePro">Jappix</span></a></li>
+        <li class="box"><a class="redbg" href="appFull.html">Ow<span class="sourcePro">Owncloud</span></a></li>
+        <li class="box"><a class="orangebg" href="appFull.html">Tr<span class="sourcePro">Transmission</span></a></li>
     </ul>
     <footer class="tac">
         <a class="btn icon icon-connexion" href="">Logout</a>
     </footer>
 </div>
+</body>
+</html>
