--- a/user/index.html
+++ b/user/index.html
@@ -31,7 +31,7 @@
                     <input type="password" id="password" placeholder="Mot de passe"/>
                 </div>
             </fieldset>
-            <a href="home.html" data-anim="slidetoleft" data-ajax="home.html" class="btn">Connexion</a>
+            <a href="home.html" class="btn">Connexion</a>
             <script type="text/javascript" src="../lib/js/uxeffect.js"></script>
         </form>
     </div>
