--- a/user/home.html
+++ b/user/home.html
@@ -29,11 +29,15 @@
             <li><a href="">Logout</a></li>
         </ul>
     </div>
-    <ul class="link-list apps sourceProBold col2 col">
-        <li class="box"><a data-ajax="home.html" data-anim="slidetoleft" class="bluebg" href="appFull.html">Ro<span class="sourcePro">RoundCube</span></a></li>
+
+    <ul class="link-list apps sourceProBold col3 col">
+        <li class="box"><a class="bluebg" href="appFull.html">Ro<span class="sourcePro">RoundCube</span></a></li>
         <li class="box"><a class="purplebg" href="appFull.html">Ja<span class="sourcePro">Jappix</span></a></li>
         <li class="box"><a class="redbg" href="appFull.html">Ow<span class="sourcePro">Owncloud</span></a></li>
         <li class="box"><a class="orangebg" href="appFull.html">Tr<span class="sourcePro">Transmission</span></a></li>
+        <li class="box"><a class="greenbg" href="appFull.html">Wo<span class="sourcePro">Wordpress</span></a></li>
+        <li class="box"><a class="darkbluebg" href="appFull.html">Ti<span class="sourcePro">Tiny Tiny RSS</span></a></li>
+        <li class="box"><a class="lightbluebg" href="appFull.html">Wa<span class="sourcePro">Wallabag</span></a></li>
     </ul>
     <footer class="tac">
         <a class="btn icon icon-connexion" href="">Logout</a>
