--- a/user/appFull.html
+++ b/user/appFull.html
@@ -19,16 +19,19 @@
     <title>YunoHost admin</title>
 </head>
 <body class="front tempapp">
-<div class="mauto">
-    
-    <!--<div class="application-window">Application</div>
-    <ul id="menuApps" class="menu-apps link-list apps sourceProBold col active">
-        <li class="box"><a data-ajax="home.html" data-anim="slidetoleft" class="bluebg" href="appFull.html">Ro</a></li>
-        <li class="box"><a class="purplebg" href="appFull.html">Ja</a></li>
-        <li class="box"><a class="redbg" href="appFull.html">Ow</a></li>
-        <li class="box"><a class="orangebg" href="appFull.html">Tr</a></li>
-    </ul>
-    <button class="appbtn" id="menuBtn"><span>Menu</span></button>-->
+<ul id="menuApps" class="menu-apps link-list apps sourceProBold col">
+    <li class="box"><a data-ajax="home.html" data-anim="slidetoleft" class="bluebg" href="appFull.html">Ro</a></li>
+    <li class="box"><a class="purplebg" href="appFull.html">Ja</a></li>
+    <li class="box"><a class="redbg" href="appFull.html">Ow</a></li>
+    <li class="box"><a class="orangebg" href="appFull.html">Tr</a></li>
+    <li class="box"><a class="bluebg" href="appFull.html">Ro</a></li>
+    <li class="box"><a class="greenbg" href="appFull.html">Wo</a></li>
+    <li class="box"><a class="darkbluebg" href="appFull.html">Ti</a></li>
+    <li class="box"><a class="lightbluebg" href="appFull.html">Wa</a></li>
+</ul>
+<div class="mauto container">
+    <button class="appbtn" id="menuBtn"><span>Menu</span></button>
+    <div class="application-window">Application</div>
 </div>
 <script type="text/javascript" src="../lib/js/uxeffect.js"></script>
 </body>
