--- a/user/appFull.html
+++ b/user/appFull.html
@@ -20,7 +20,15 @@
 </head>
 <body class="front tempapp">
 <ul id="menuApps" class="menu-apps link-list apps sourceProBold col">
-    <li class="box"><a data-ajax="home.html" data-anim="slidetoleft" class="bluebg" href="appFull.html">Ro</a></li>
+    <li class="box"><a class="bluebg" href="appFull.html">Ro</a></li>
+    <li class="box"><a class="purplebg" href="appFull.html">Ja</a></li>
+    <li class="box"><a class="redbg" href="appFull.html">Ow</a></li>
+    <li class="box"><a class="orangebg" href="appFull.html">Tr</a></li>
+    <li class="box"><a class="bluebg" href="appFull.html">Ro</a></li>
+    <li class="box"><a class="greenbg" href="appFull.html">Wo</a></li>
+    <li class="box"><a class="darkbluebg" href="appFull.html">Ti</a></li>
+    <li class="box"><a class="lightbluebg" href="appFull.html">Wa</a></li>
+    <li class="box"><a class="bluebg" href="appFull.html">Ro</a></li>
     <li class="box"><a class="purplebg" href="appFull.html">Ja</a></li>
     <li class="box"><a class="redbg" href="appFull.html">Ow</a></li>
     <li class="box"><a class="orangebg" href="appFull.html">Tr</a></li>
