--- a/user/home.html
+++ b/user/home.html
@@ -17,31 +17,38 @@
 
     <title>YunoHost admin</title>
 </head>
-<body class="front">
-<div class="mauto interface">
-    <div class="user sourcePro tac">
-        <div class="user-image icon-user icon"></div>
-        <h2 class="user-pseudo sourceProBold">Courgette</h2>
-        <h3 class="user-name">Thomas LEBEAU</h3>
-        <ul class="link-list user-menu">
-            <li><a href="">Edit</a></li>
-            <li><a href="">Change password</a></li>
-            <li><a href="">Logout</a></li>
-        </ul>
-    </div>
+<body class="interface application-window">
+    <div class=""></div>
+    <h1 class="posa logo"><img src="img/logo-ynh.svg"/><span class="element-invisible">Yunohost</span></h1>
+    <div class="mauto overlay">
+        <div class="user sourcePro">
+            <div class="user-image icon-user icon dib"></div>
+            <div class="user-info dib">
+                <h2 class="user-pseudo sourceProBold">Courgette</h2>
+            <h3 class="user-name">Thomas LEBEAU</h3>    
+            </div>
+            <!--<ul class="user-config link-list dib">
+                <li><a class="icon icon-connexion" href="">Logout</a></li>
+            </ul>-->
+            <ul class="link-list user-menu">
+                <li><a href="">Edit</a></li>
+                <li><a href="">Change password</a></li>
+                <li><a href="">Logout</a></li>
+            </ul>
+        </div>
 
-    <ul class="link-list apps sourceProBold col3 col">
-        <li class="box"><a class="bluebg" href="appFull.html">Ro<span class="sourcePro">RoundCube</span></a></li>
-        <li class="box"><a class="purplebg" href="appFull.html">Ja<span class="sourcePro">Jappix</span></a></li>
-        <li class="box"><a class="redbg" href="appFull.html">Ow<span class="sourcePro">Owncloud</span></a></li>
-        <li class="box"><a class="orangebg" href="appFull.html">Tr<span class="sourcePro">Transmission</span></a></li>
-        <li class="box"><a class="greenbg" href="appFull.html">Wo<span class="sourcePro">Wordpress</span></a></li>
-        <li class="box"><a class="darkbluebg" href="appFull.html">Ti<span class="sourcePro">Tiny Tiny RSS</span></a></li>
-        <li class="box"><a class="lightbluebg" href="appFull.html">Wa<span class="sourcePro">Wallabag</span></a></li>
-    </ul>
-    <footer class="tac">
-        <a class="btn icon icon-connexion" href="">Logout</a>
-    </footer>
-</div>
+        <ul class="link-list apps sourceProBold dib">
+            <li class="box"><a class="bluebg" href="appFull.html">Ro<span class="sourcePro">RoundCube</span></a></li>
+            <li class="box"><a class="purplebg" href="appFull.html">Ja<span class="sourcePro">Jappix</span></a></li>
+            <li class="box"><a class="redbg" href="appFull.html">Ow<span class="sourcePro">Owncloud</span></a></li>
+            <li class="box"><a class="orangebg" href="appFull.html">Tr<span class="sourcePro">Transmission</span></a></li>
+            <li class="box"><a class="greenbg" href="appFull.html">Wo<span class="sourcePro">Wordpress</span></a></li>
+            <li class="box"><a class="darkbluebg" href="appFull.html">Ti<span class="sourcePro">Tiny Tiny RSS</span></a></li>
+            <li class="box"><a class="lightbluebg" href="appFull.html">Wa<span class="sourcePro">Wallabag</span></a></li>
+        </ul>
+        <footer class="tac">
+            
+        </footer>
+    </div>
 </body>
 </html>
