--- a/user/home.html
+++ b/user/home.html
@@ -19,8 +19,8 @@
 </head>
 <body class="interface application-window">
     <div class=""></div>
-    <h1 class="posa logo"><img src="img/logo-ynh.svg"/><span class="element-invisible">Yunohost</span></h1>
-    <div class="mauto overlay">
+    <h1 id="logo" class="posa logo"><img src="img/logo-ynh.svg"/><span class="element-invisible">Yunohost</span></h1>
+    <div id="overlay" class="mauto overlay active">
         <div class="user sourcePro">
             <div class="user-container">
                 <div class="user-image icon-user icon dib"></div>
@@ -56,5 +56,6 @@
             
         </footer>
     </div>
+    <script type="text/javascript" src="../lib/js/uxeffect.js"></script>
 </body>
 </html>
