test anim overlay

--- a/user/home.html
+++ b/user/home.html
@@ -21,7 +21,7 @@
     <div class=""></div>
     <h1 id="logo" class="posa logo"><img src="img/logo-ynh.svg"/><span class="element-invisible">Yunohost</span></h1>
     <div id="overlay" class="mauto overlay active">
-        <div class="user sourcePro">
+        <div id="user" class="user sourcePro">
             <div class="user-container">
                 <div class="user-image icon-user icon dib"></div>
                 <div class="user-info dib">
@@ -38,7 +38,7 @@
                 <li><a href="">Logout</a></li>
             </ul>
         </div>
-        <div class="apps">
+        <div id="apps" class="apps">
             <h2 class="sourcePro">My <span class="sourceProBold">Apps</span></h2>
             <ul class="link-list sourceProBold dib">
                 <li class="box"><a class="bluebg" href="appFull.html">Ro<span class="sourcePro">RoundCube</span></a></li>
