--- a/user/home.html
+++ b/user/home.html
@@ -19,7 +19,7 @@
 </head>
 <body class="interface application-window">
     <h1 id="logo" class="posa logo"><img src="img/logo-ynh.svg"/><span class="element-invisible">Yunohost</span></h1>
-    <div id="overlay" class="mauto overlay active user-active">
+    <div id="overlay" class="mauto overlay active">
         <div id="user-config" class="user-config-container user-config-layout">
             <div class="user-info-container">
                 <div class="close">X</div>
