design panel left

--- a/user/home.html
+++ b/user/home.html
@@ -19,27 +19,27 @@
 </head>
 <body class="interface application-window">
     <h1 id="logo" class="posa logo"><img src="img/logo-ynh.svg"/><span class="element-invisible">Yunohost</span></h1>
-    <div id="overlay" class="mauto overlay active">
+    <div id="overlay" class="mauto overlay active user-active">
         <div id="user-config" class="user-config-container user-config-layout">
             <div class="user-info-container">
                 <div class="close">X</div>
-                <h2 class="sourceProBold">Your information</h2>
+                <h2 class="sourceProBold title">Your information</h2>
                 <div class="user-info-sup">
-                    <h2>Mail</h2>
+                    <h3>Mail <a href="" title="edit Mail">+<span class="element-invisible">Edit</span></a></h2>
                     <ul class="">
                         <li>courgette@farcie.fr</li>
                     </ul>
-                    <h2>Alias</h2>
+                    <h3>Alias <a href="" title="edit Alias Mail">+<span class="element-invisible">Edit</span></a></h2>
                     <ul class="">
                         <li>admin@farcie.fr</li>
                         <li>contact@farcie.fr</li>
                     </ul>
-                    <h2>Forward</h2>
+                    <h3>Forward <a href="" title="edit Forward Mail">+<span class="element-invisible">Edit</span></a></h2>
                     <ul class="">
                         <li>coucou@coucou.fr</li>
                     </ul>
                 </div>
-                <a href="" data-id="password-active" class="btn icon icon-left-open">Change password</a>
+                <a href="" data-id="password-active" class="btn">Change password</a>
             </div>
         </div>
         <div id="apps" class="apps">
