anim review fix FF

--- a/user/home.html
+++ b/user/home.html
@@ -19,7 +19,7 @@
 </head>
 <body class="interface application-window">
     <h1 id="logo" class="posa logo"><img src="img/logo-ynh.svg"/><span class="element-invisible">Yunohost</span></h1>
-    <div id="overlay" class="mauto overlay active user-active">
+    <div id="overlay" class="mauto overlay active ">
         <div id="user-config" class="user-config-container user-config-layout">
             <div class="user-info-container">
                 <div class="close">X</div>
@@ -42,9 +42,7 @@
                 <a href="" data-id="password-active" class="btn">Change password</a>
             </div>
         </div>
-        <div id="apps" class="apps">
-            
-            <div id="user" class="user sourcePro">
+        <div id="user" class="user sourcePro">
                 <div class="user-container icon icon-left-open">
                     <a href="#user-config" data-id="user-active" class="user-image icon-user icon dib btnClick"></a>
                     <div class="user-info dib">
@@ -56,6 +54,8 @@
                     <li><a class="icon icon-connexion" href="">Logout</a></li>
                 </ul>
             </div>
+        <div id="apps" class="apps">
+            
             <ul class="link-list listing-apps sourceProBold dib">
                 <li><h2 class="sourcePro title">My <span class="sourceProBold">Apps</span></h2></li>
                 <li class="box"><a class="bluebg" href="appFull.html">Ro<span class="sourcePro">RoundCube</span></a></li>
