--- a/user/home.html
+++ b/user/home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -43,16 +42,17 @@
             </div>
         </div>
         <div id="user" class="user sourcePro">
-                <div class="user-container icon icon-left-open">
-                    <a href="#user-config" data-id="user-active" class="user-image icon-user icon dib btnClick"></a>
+                <ul class="link-list user-menu">
+                    <li><a class="icon icon-connexion" href="index.html">Logout</a></li>
+                </ul>
+                <div class="user-container">
+                    <a href="#" data-id="user-active" class="user-image icon-user icon dib btnClick"></a>
                     <div class="user-info dib">
                         <h2 class="user-pseudo sourceProBold"><a data-id="user-active" class="btnClick" href="#user-config">Courgette</a></h2>
-                        <h3 class="user-name"><a data-id="user-active" class="btnClick" href="#user-config">Thomas LEBEAU</a></h3>    
+                        <h3 class="user-name"><a data-id="user-active" class="btnClick" href="#user-config">Thomas LEBEAU</a></h3>
+                        <span class="user-mail">courgette@farcie.fr</span>   
                     </div>
                 </div>
-                <ul class="link-list user-menu">
-                    <li><a class="icon icon-connexion" href="">Logout</a></li>
-                </ul>
             </div>
         <div id="apps" class="apps">
             
